my_judge/dealCompile/tmp
../getTest.cpp:14:1: error: expected unqualified-id before ‘{’ token
   14 | {
      | ^
